# ThunderLoom

./: .gitignore  LICENSE.txt  Makefile  Makefile.win  README.md  coordinate_systems.txt
.github/workflows/: ci.yml
example_scenes/dragon/: dragon.blend.REMOVED.git-id
example_scenes/monkeytowel/: 18067.wif  34779.wif  55116.wif  towel.xml
frontends/: CMakeLists.txt  building.txt
frontends/api_demo/: Makefile  main.cpp
frontends/dependencies/: README.txt
frontends/installer/: CMakeLists.txt  PackageContents.xml.in  PackageContents_3ds_max.xml.in  PackageContents_per_3ds_max_version.xml.in  make_installer.bat.in  thunderloom.wxs.in  thunderloom_per_3ds_max_version.wxs.in
frontends/installer/data/: README.md  license.rtf
frontends/mitsuba/: README.md  SConstruct
frontends/mitsuba/blender_mtsblend/: 0001-add-thunderLoom-to-mtsblend.patch  README.md  thunderloom_mitsuba.py
frontends/mitsuba/example_scenes/monkeytowel/: 8452.wif  towel_envmap.xml  towel_single_light.xml
frontends/mitsuba/mitsubadir/src/bsdfs/: stripes.cpp
frontends/mitsuba/mitsubadir/src/bsdfs/cloth/: SConscript  cloth.cpp
frontends/mitsuba/mtsblend/: Readme
frontends/mitsuba/mtsblend/core/: __init__.py
frontends/mitsuba/mtsblend/export/: geometry.py
frontends/mitsuba/mtsblend/nodes/: node_bsdf.py
frontends/mitsuba/mtsblend/outputs/: file_api.py
frontends/mitsuba/src/: SConstruct  cloth.cpp  thunderloom_mitsuba.cpp
frontends/raytracer/: CMakeLists.txt  main.c  raytracer.c  raytracer.cu  raytracer.h
frontends/standalone_pattern_editor/: CMakeLists.txt  Makefile  README.txt  StandalonePatternEditor.sln  StandalonePatternEditor.vcxproj  StandalonePatternEditor.vcxproj.filters  macos_wrapper.mm  main.cpp
frontends/standalone_pattern_editor/targets/linux/: Makefile
frontends/standalone_pattern_editor/targets/macos/: Makefile
frontends/standalone_pattern_editor/targets/macos/Base.lproj/: MainMenu.xib
frontends/standalone_pattern_editor/targets/macos/StandalonePatternEditor.xcodeproj/: project.pbxproj
frontends/standalone_pattern_editor/targets/macos/StandalonePatternEditor.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
frontends/standalone_pattern_editor/targets/mcvs/: StandalonePatternEditor.sln  StandalonePatternEditor.vcxproj  StandalonePatternEditor.vcxproj.filters
frontends/vray/: CMakeLists.txt  README.md  mannequin.vrscene  test.vrscene  trousers.ptn  vray_thunderloom.cpp  vray_thunderloom.h  vray_thunderloom_updated.cpp
frontends/vray/targets/macos/: Makefile
frontends/vray/targets/mcvs/: VRayStandalone.sln  VRayStandalone.vcxproj
frontends/vray3dsMax/: CMakeLists.txt  DllEntry.cpp  PackageContents.xml  README.md  ThunderLoomMtl.cpp  ThunderLoomMtl.h  ThunderLoomMtl.rc  make_installer.bat  make_installer.nsi  resource.h  vray3dsMaxThunderLoom.sln
frontends/vray3dsMax/3dsMax/: 3dsMaxPlugin.vcxproj  3dsMaxPlugin.vcxproj.filters  3dsMaxThunderLoom.cpp  3dsMaxThunderLoom.h  DllEntry.cpp  Eval.cpp  Eval.h  RCa59212  VrayThunderLoomBRDF.cpp  VrayThunderLoomBRDF.h  dynamic.h  dynamic_load.c  dynamic_load.h  helper.h  resource.h  vrayblinnmtl.rc
frontends/vray3dsMax/3dsMax_dynamic/: Dynamic.vcxproj  stdafx.cpp
frontends/vraymaya/: AEVRayThunderLoomMtlTemplate.mel  CMakeLists.txt  Makefile  README.md  ThunderLoom.mod  maya_pluginmain.cpp  maya_thunderloom.cpp  maya_thunderloom.h  vraythunderloommtl.txt  vraythunderloommtl_old.txt  vraythunderloommtl_updated.txt
frontends/vraymaya/targets/mcvs/: VRayMayaThunderLoom.sln  VRayMayaThunderLoom.vcxproj
mitsubadir/src/bsdfs/: cloth.cpp
mitsubadir/src/bsdfs/cloth/: cloth.cpp
mitsubadir/src/bsdfs/wif/: ini.c  wif.c  wif.h
mtsblend/: __init__.py
mtsblend/nodes/: node_bsdf.py
mtsblend/outputs/: file_api.py
src/: halton.h  pattern_editor.h  perlin.h  str2d.h  thunderloom.h  woven_cloth.cpp  woven_cloth.h
src/noise/: Makefile.linux  main.c  main.cpp  noise.c  noise.cpp  noise.h
src/wif/: .gitignore  README.md  ini.cpp  wif.cpp  wif.h
test_scenes/coordinate_systems/: coordinate_systems.blend  read_coordinates.py
test_scenes/gabardine/: gabardine.blend.REMOVED.git-id  gabardine.blend1.REMOVED.git-id
test_scenes/specular_reflection/: specular_reflection.blend
tests/test_calculate_segment_size/: 54235plain.wif  Makefile  test_calculate_segment_size.cpp
tests/test_yarn_size/: 3parallelwarps.wif  Makefile  out.txt  test.wif  test_yarn_size.cpp
tools/fuzz_weave_files/: Makefile  main.c
tools/fuzz_weave_files/input/: 16.wif  2202.wif
tools/plot_halton/: Makefile  plot_halton.c  plot_halton.m
tools/plot_perlin/: Makefile  plot_perlin.c  plot_perlin.m
tools/plot_von_mises/: Makefile  gen.m  main.c  plot_von_mises.m
tools/test_api/: Makefile  main.cpp
tools/test_calculate_segment_size/: 2parallel.wif  Makefile  test_calculate_segment_size.cpp
tools/test_weave_file/: Makefile  test.weave  test_weave_file.cpp
tools/test_yarn_size/: 3parallelwefts.wif  Makefile  test.weave  test_yarn_size.cpp
tools/test_yarn_types/: Makefile  test.weave
utils/compute_normalization_table/: CMakeLists.txt  compute_normalization_table.c  pcg_basic.c  write_image.c
vray/Dynamic/: Dynamic.cpp  Dynamic.vcxproj  Dynamic.vcxproj.filters  export.def
vray/vrayblinnmtl/: blinnbrdf.cpp  blinnbrdf.h  dynamic.h  mtlshade.cpp  plugin.cpp  resource.h  vrayblinnmtl.cpp  vrayblinnmtl.dsp  vrayblinnmtl.h  vrayblinnmtl.rc  vrayblinnmtl.sln  vrayblinnmtl.vcxproj  vrayblinnmtl.vcxproj.filters  weave.h
vray/vrayblinnmtl/wif/: Makefile.windows  common.h  wif.cpp  wif.h
vray3dsMax/: vray3dsMaxThunderLoom.VC.db.REMOVED.git-id  vray3dsMaxThunderLoom.sln
vray3dsMax/3dsMax/: 3dsMaxPlugin.vcxproj  3dsMaxPlugin.vcxproj.filters  3dsMaxThunderLoom.cpp  3dsMaxThunderLoom.h  VrayThunderLoomBRDF.cpp  VrayThunderLoomBRDF.h  blinnbrdf.cpp  blinnbrdf.h  dynamic.h  mtlshade.cpp  plugin.def  resource.h  vrayblinnmtl.rc
vray3dsMax/3dsMax_dynamic/: Dynamic.cpp  Dynamic.vcxproj  ReadMe.txt  export.def
wif/: .gitignore  Makefile  Makefile.linux  common.h  ini.h  main.c  wif.c  wif.h
wif/data/: 41753.wif
(+2 files in other folders)
